--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-date-picker": "^4.2.13"
